syntax = "proto3";
package th2;

import "google/protobuf/empty.proto";
import "th2/infra.proto";
option java_multiple_files = true;
option java_package = "com.exactpro.th2.hand.grpc";

// The RH service definition.
service HandBase {
  // Sends a query
  rpc getRhInfo (google.protobuf.Empty) returns (RhInfo) {}
  rpc runScript (BaseRequest) returns (BaseResponse) {}
}

message BaseRequest {
  string scriptText = 1;
  string scriptName = 2;
  map<string, string> params = 3;
  int32 waitInSeconds = 4;
  EventID parentEventId = 5;
}

// The response message
message BaseResponse {
  string scriptResult = 1;
  string errorMessage = 2;
  repeated string textOut = 3;
  string sessionId = 4;
}

message RhInfo {
  string sessionId = 1;
  string userBrowser = 2;
}